--- a/public/Css/style.css
+++ b/public/Css/style.css
@@ -149,8 +149,9 @@ input{
     background-color: rgb(117, 117, 243);
     border: none;
     border-radius: 5px;
-     padding: 0em 2em 0.5em .1em;
-     margin-top: 1em;
+    padding: 0em 2em 0.5em .1em;
+    margin-top: 1em;
+    
 }
 
 .sort-select{
@@ -246,7 +247,8 @@ input{
   border-radius: 8px;
   font-size: 16px;
   cursor: pointer;
-  margin-top: 10px;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 .job-description p, li{
