--- a/public/css/global.css
+++ b/public/css/global.css
@@ -30,54 +30,73 @@ a:hover {
   background-color: #000080;
 }
 
-.navbar {
-  background-color: #191970;
-  color: #fff;
-  padding: 1rem 2rem;
-}
 
-.navbar-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 1200px;
-  margin: 0 auto;
-}
 
 .navbar-logo {
   font-size: 1.5rem;
   font-weight: bold;
+  
 }
 
-.navbar-logo a {
+ .navbar-logo a {
   text-decoration: none;
   font-size: 1.5rem;
   font-weight: 700;
-  color: #fff;
-}
+  /* color: #fff; */
+} 
 
 .navbar-logo a:hover {
   color: #007bff;
 }
 
 
-.navbar-links {
-  list-style: none;
+header{
   display: flex;
-  gap: 2rem;
+  
+}
+
+.menu{
+margin-left: auto;
+margin-top: .5em;
+cursor: pointer;
+padding: .5em;
+background-color: rgb(117, 123, 242);
+color: white;
+border-radius: 5px;
+border: none;
+  
+}
+
+.navbar-links{
   padding: 0;
   margin: 0;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  /* align-items: center; */
+  
 }
 
-.navbar-links li a {
-  color: #fff;
-  font-size: 1rem;
-}
+.nav-section.show {
+    display: block; 
+   }
 
-.navbar-links li .active-link {
+  .nav-section{
+    margin-top: 2em;
+    background-color: rgb(130, 100, 239);
+    display:none ;
+    
+} 
+
+
+
+.nav-a{
+  text-decoration: none;
   font-weight: bold;
-  text-decoration: underline;
+  color: white;
 }
+
 
 .footer {
   background-color: #f5f5f5;
@@ -100,26 +119,29 @@ a:hover {
   margin-top: 1rem;
 }
 
-/* Responsive for smaller screens */
-@media (max-width: 48rem) {
-  .navbar-container {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 1rem;
-  }
+/* Responsive for tablet screens  */
+@media(min-width: 600px){
+    /* .header-btn{
+        margin-top: 5em;
+    } */
 
-  .navbar-links {
-    flex-direction: column;
-    width: 100%;
-  }
-
-  .navbar-links li a {
-    padding: 0.75rem 0;
-    width: 100%;
-  }
-
-  .footer-links {
-    flex-direction: column;
-    gap: 0.75rem;
-  }
+    .navbar-links{
+      flex-direction: row;
+      align-items: center;
+      margin-left: auto;
+      padding: 1.8em;
+      text-decoration: none;
+      
+    }
+    .nav-section{
+      display: block;
+      
 }
+
+.menu{
+  display: none;
+}
+}
+
+
+
