--- a/public/css/global.css
+++ b/public/css/global.css
@@ -119,7 +119,7 @@ border: none;
   margin-top: 1rem;
 }
 
-/* Responsive for tablet screens  */
+/* Responsive for tablet screens  for the  */
 @media(min-width: 600px){
     /* .header-btn{
         margin-top: 5em;
@@ -141,7 +141,23 @@ border: none;
 .menu{
   display: none;
 }
+
+
 }
+
+@media(min-width: 760px){
+  .companies-container{
+    margin-bottom: 2em;
+  }
+}
+
+@media(min-width: 1024px){
+   .companies-container {
+    margin-bottom: 2em;
+  }
+}
+
+
 
 
 
